# utils_c

./: CMakeLists.txt  README.md  chinesremainder.c  invert2exp.c  primelist.c
